@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 19-07-2005 added: System.KaiConnected conditional visibility.
+ - 19-07-2005 fixed: Various skin issues (thumbpanels + buttonscroller)
  - 19-07-2005 fixed: Vis as screensaver had issues on finish of song.
  - 19-07-2005 fixed: Framerate in video playback.
  - 19-07-2005 added: SITE HELP command.
